--- a/spacedRepetition.org
+++ b/spacedRepetition.org
@@ -1491,6 +1491,19 @@ something more distasteful and pernicious than just a set of interchangeable
 thematic variations on the maudlin human-interest narrative of uplift and
 overcoming.
 
+** Noun                                                               :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :END:
+Define the word
+*** English
+parvenu
+*** Definition
+one that has recently or suddenly risen to an unaccustomed position of wealth or
+power and has not yet gained the prestige, dignity, or manner associated with it
+*** Example sentence
+Though in Chan's case he doesn't evolve beyong being a clownish parvenu.
+
 * -----------------------------------------------------------------------------------------------
 
 ** Adjective, Noun, Verb
