--- a/spacedRepetition.org
+++ b/spacedRepetition.org
@@ -1504,6 +1504,19 @@ power and has not yet gained the prestige, dignity, or manner associated with it
 *** Example sentence
 Though in Chan's case he doesn't evolve beyong being a clownish parvenu.
 
+** Adjective                                                          :drill:
+  :PROPERTIES:
+  :DRILL_CARD_TYPE: twosided
+  :END:
+Define the word
+*** English
+soi-disant
+*** Definition
+usually disparaging.
+self proclaimed, so-called
+*** Eymology
+French, literally, saying oneself
+
 * -----------------------------------------------------------------------------------------------
 
 ** Adjective, Noun, Verb
