--- a/files/setup/README.org
+++ b/files/setup/README.org
@@ -16,3 +16,6 @@ Automated process for
 #### uninstall
 - [ ] fitbit
 - [ ] solitaire
+### STUFF TO LOOK INTO
+- [ ] Sublime and [[https://github.com/sublime-emacs/sublemacspro][Emacs keybindings]] and [[https://latextools.readthedocs.io][latextools]] and Miktex
+- [ ]
