--- a/files/battleOfTheAtom/battleOfTheAtom.org
+++ b/files/battleOfTheAtom/battleOfTheAtom.org
@@ -10,6 +10,10 @@ ________________________________________________________________________________
 *** Giant-Size X-men #1
 *** X-Men: Deadly Genesis
 *** X-Men: No More Humans
+** Episode 3
+*** Battle of the Atom
+*** Excalibur: Mojo Mayhem
+*** Wolverine Vol 1: #1-4
 * Master List
 :Episode-1:
 1. God Loves Man Kills
@@ -24,3 +28,10 @@ ________________________________________________________________________________
 5. God Loves Man Kills II
 ???. X-Men: No More Humans
 :END:
+* Personal List
+1. God Loves Man Kills
+2. Wolverine & the X-Men #17 (Doop)
+3. Giant-Size X-men #1
+4. X-Men: No More Humans
+5. X-Men: Deadly Genesis
+6. God Loves Man Kills II
