--- a/files/battleOfTheAtom/battleOfTheAtom.org
+++ b/files/battleOfTheAtom/battleOfTheAtom.org
@@ -25,8 +25,8 @@ ________________________________________________________________________________
 2. Wolverine & the X-Men #17 (Doop)
 3. Giant-Size X-men #1
 4. X-Men: Deadly Genesis
-5. God Loves Man Kills II
-???. X-Men: No More Humans
+5. X-Men: No More Humans
+6. God Loves Man Kills II
 :END:
 * Personal List
 1. God Loves Man Kills
